# Eric-rust

./: .gitignore  Cargo.toml  README.md  botSettings.toml
src/: main.rs
