[package]
name = "eric"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "^0.10"
tokio = { version = "^1.11", features = ["rt-multi-thread"] }
config = { version = "^0.11", default-features = false, features = ["toml"] }
